--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "@headlessui/react": "^2.1.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
