--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "@headlessui/react": "^2.1.2",
+    "@next/third-parties": "^14.2.11",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
